--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev":"nodemon backend/server.js"
   },
+  "type":"module",
   "keywords": [],
   "author": "",
   "license": "ISC",
